more single profiles

--- a/_posts/2018-02-05-nbamidseason18.html
+++ b/_posts/2018-02-05-nbamidseason18.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "NBA Midseason Reflections"
 date:   2018-02-05 15:55:20 -0700
-author: Ronaq Virdi
+author: ronaq_virdi
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <p>The All Star lineups have been announced, most teams have played well over 45 games, we finally have a team openly tanking, and the Cavs all hate each other. So with that it's safe to say that the midway point of the NBA season has come and now would be a great time to reflect on the past couple months of the 2017-2018 season. By now everyone knows how great the Warriors are, how dysfunctional LeBron's team is, and that the Sacramento Kings are once again irrelevant. I wanted to take this time to deviate away from the major storylines in the season thus far and analyze some trends, statistics, coaching decisions, and quite simply things that really stand out to me. </p>
