--- a/_posts/2018-05-01-kenDerby.html
+++ b/_posts/2018-05-01-kenDerby.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Kentucky Derby 2018: History, Trends, and Predictions"
 date:   2018-05-01 00:00:20 -0700
-author: Joey Maurer
+author: joey_maurer
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <img class="excerptpics" src ="/assets/kent/cover.jpg" alt="Horses Charging"></center><p>Described as “The Most Exciting Two Minutes in Sports”, the Kentucky Derby never fails to capture the attention of sports and gambling enthusiasts alike each May. First held in 1875, the world famous race at Churchill Downs has become ingrained in American sports culture. Thoroughbreds that have gone on to become immortalized in history used the Derby as a stepping stone to greatness. The 144th Kentucky Derby will take place on Saturday, May 5.</p>
