--- a/_posts/2018-03-11-blakegriffin.html
+++ b/_posts/2018-03-11-blakegriffin.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Blake Griffin: Sharpshooter or Bricklayer?"
 date:   2018-03-11 15:55:20 -0700
-author: Nikhil Sharma
+author: nikhil_sharma
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <img class="excerptpics" src ="/assets/griffin/image4.png" alt="Blake Griffin"></center><p>From a decorated high-school recruit, to Naismith College Player of the Year, to apparent resuscitator of the Dunk Contest, to slugger of an equipment manager, to highly controversial trade chip, Blake Griffin’s basketball career has had quite the peaks and valleys.</p>
