finished author links

--- a/_posts/2018-01-13-wsoccer18.html
+++ b/_posts/2018-01-13-wsoccer18.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "An In-Depth Look at NCAA Pac-12 Women’s Soccer"
 date:   2018-01-13 19:45:55 -0700
-author: joey_maurer
+authors:
+- joey_maurer
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets//wsoccer18/soccer.png" alt="UCLA Women's Soccer"></center><p>Women’s collegiate soccer is thriving on the west coast. Less than two months ago, the championship game of the College Cup saw two Pac-12 powerhouses go head-to-head in Orlando, Florida. Stanford emerged with a 3-2 victory over UCLA to secure their second title since 2011 and the conference’s fourth in that seven-year span. Both teams are set up extremely well heading into next season, and the road to a national championship appears to run through California. </p>
