--- a/_posts/2018-03-02-mcconnell.html
+++ b/_posts/2018-03-02-mcconnell.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "TJ McConnell Should Not Be In the NBA"
 date:   2018-03-02 00:00:20 -0700
-author: zane_winston
+authors:
+- zane_winston
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/mcconnell/tj.png" alt="TJ McConnell"></center><p>Quite frankly, TJ McConnell shouldn't be in the NBA. He has proven us wrong time and time again; he started his college career at Duquesne, he wasn't drafted, he was picked up as a rotation player on the worst team in the league, and he's a short point guard who can't shoot threes. That's not to say that he's a bad player; he averages 24.5 minutes per game on a Sixers team likely to make the playoffs. </p>
