--- a/_posts/2018-03-22-uclaGym.html
+++ b/_posts/2018-03-22-uclaGym.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "UCLA Gymnastics: Analysis and Optimal Lineups Heading into Championship Meets"
 date:   2018-03-22 00:00:20 -0700
-author: joey_maurer
+authors:
+- joey_maurer
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <img class="excerptpics" src ="/assets/gymnastics/cover.jpg" alt="UCLA Gymnastics girl"></center><p>The most exciting time of the year for women’s collegiate gymnastics is just around the corner. UCLA, currently ranked 3rd in the country, will compete for a conference, regional, and hopefully national championship in the coming weeks. Boasting a roster littered with former Olympians and elite gymnasts, the Bruins are in a great position to challenge Oklahoma, LSU, and the rest of the best programs in America for a NCAA title.</p>
