--- a/_posts/2018-04-20-nflDraft.html
+++ b/_posts/2018-04-20-nflDraft.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "NFL Draft 2018: Bruin Prospects"
 date:   2018-04-20 12:55:20 -0700
-author: alex_veroulis
+authors:
+- alex_veroulis
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <img class="excerptpics" src ="/assets/nflDraft/cover.png" alt="NFL Draft Logo"></center><p>It’s that time of year, again. The 2018 NFL Draft is right around the corner, as the event will take place this year on April 26th in Arlington, Texas at the Dallas Cowboys’ stadium. The draft is a chance for all teams to improve in their own ways; teams at the top of the draft like the Cleveland Browns have to fill a litany of position needs, while teams at the bottom of the draft like the Super Bowl LII Champion Philadelphia Eagles just need to polish their already strong squads. The draft is also a crucial time for general managers around the league, who all bear the responsibility of determining the fates of their respective teams for many years to come.</p>
