--- a/_posts/2018-05-22-defChamp.html
+++ b/_posts/2018-05-22-defChamp.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "Does Defense Really Win Championships? An In-Depth Analysis of the NBA Playoffs"
 date:   2018-05-22 00:00:20 -0700
-author: don_vu
+authors:
+- don_vu
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <img class="excerptpics" src ="/assets/defense/cover.jpg" alt="2004 Pistons"></center><figcaption>Jed Jacobsohn/Getty Images</figcaption><p>With 2 minutes left on the clock, Richard Hamilton stepped up to the free throw line.  He dribbled the ball a few times and calmly knocked down both shots to seal one of the most stunning upsets in playoff history.  The Detroit Pistons had defeated the heavily favored Los Angeles Lakers to become the 2004 NBA Champions.  Hardly anyone could have predicted that this team would overcome the combined talents of Kobe Bryant and Shaquille O’Neal along with the brilliance of Phil Jackson.  Most analysts give credit to the outstanding defense the Pistons displayed.  Though their offense just placed 7th, this Pistons team had the best ranked defense throughout the playoffs and actually had the highest average defensive rating in postseason history.</p>
