--- a/_posts/2018-05-30-oakAs.html
+++ b/_posts/2018-05-30-oakAs.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "Early Overachievers: The 2018 Oakland Athletics"
 date:   2018-05-30 00:00:20 -0700
-author: alex_veroulis
+authors:
+- alex_veroulis
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/oakland/cover.jpeg" alt="A's teammates"></center><figcaption><i>The Mercury News</i>; from L to R, Matt Chapman, Matt Olson, and Marcus Semien</figcaption><p>At the beginning of the 2018 MLB season, many experts thought the Oakland Athletics would once again sport one of the worst records in baseball. According to Baseball Prospectus, the Athletics were projected to have a 76-86 record this year, which would be a miniscule improvement from their 75-87 record last year. The oddsmakers at Bovada had even lower expectations for the squad, as the over/under for their win total was set at 74.5. Given that the team has been in the American League West cellar for three years straight, even the most optimistic A’s fans had to acknowledge that a playoff appearance might not be in order for at least a couple of years. So, you can’t really blame all the people who slept on the A’s going into the season, especially since Oakland didn’t do much over the offseason to improve themselves. But, the A’s have given their fans some hope with their impressive start to the season; after the first 54 games of the campaign, Oakland stands at 28-26, good for a .519 win percentage. People around the game might be surprised at this kind of run, but when looking at the roster makeup and the major statistics on both sides of the ball, one can better understand why the A’s are experiencing this kind of success.</p>
