--- a/_posts/2018-06-08-vegasGK.html
+++ b/_posts/2018-06-08-vegasGK.html
@@ -2,7 +2,8 @@
 layout: post
 title:  "Vegas Golden Knights: The Most Successful Expansion Team in NHL History"
 date:   2018-06-08 00:00:20 -0700
-author: joey_maurer
+authors:
+- joey_maurer
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/vegas/cover.jpg" alt="golden knights"></center><figcaption>The Associated Press</figcaption><p>This wasn’t supposed to happen. The first major professional sports team to ever grace the city of Las Vegas wasn’t supposed to be this good. Hockey wasn’t meant to be played in the desert. A team full of disposable parts and cast-offs wasn’t supposed to mesh this well together. It must be a fluke.</p>
