--- a/about.html
+++ b/about.html
@@ -36,8 +36,7 @@ layout: default
                 If you are interested in learning more about what we do, please contact us <a href= "mailto:bruinsportsanalyticsclub@gmail.com">here!</a>
             </p>
             <hr>
-            <h1>Why Sports Analytics?</h1>
-          </div>
+            <h1>More info coming soon!</h1>
           </div>
         </center>
       </section>
