--- a/about.html
+++ b/about.html
@@ -25,6 +25,18 @@ layout: default
       <section class="module content">
         <center>
           <div id="abtdescription">
+            <h1>Get Involved!</h1>
+            <p>
+              Click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdT0CXZ8BeOfeChNb5H_QxlNMfWeYntOyycPWRUeGrjZTPChg/viewform?usp=sf_link">here</a> to apply!
+            </p>
+            <p>
+                Info session is going to be held <strong><b>October 1st</b></strong> (location TBA)
+            </p>
+            <p>
+                First meeting, <strong><b>October 10th</b></strong><br>Haines Hall, Room A2. 7-8pm
+            </p>
+          </div>
+          <div id="abtdescription">
             <h1>About</h1>
             <p>
                 Bruin Sports Analytics is a student-run sports statistics club that serves as a platform for sports research, data journalism, and machine learning applications.
