--- a/officers/index.html
+++ b/officers/index.html
@@ -94,7 +94,7 @@ title: Officers/Members
               <div class="modal-content">
                   <img class="officer-images" src="../assets/kevin.jpg" alt="Avatar">
                 <h4>Kevin Chen</h4>
-                <p class="modal-text">AKevin Chen is a second year student pursuing a double major in statistics and economics. Upon graduation, he wants to work in basketball analytics and dreams of a job in the NBA in the future. His hobbies and interests include basketball, tennis, soccer, watching tv and movies, and hiking and road trips.</p>
+                <p class="modal-text">I’m a third-year statistics and economics double major who hails from Kolkata, India. I love to play, watch, and read about basketball, and I’m an avid soccer fan as well, supporting Liverpool FC in the English Premier League. My immediate career goal is to be a sports data analyst for the Lakers, but I’m also interested in pursuing other careers in the tech industry in general. Fun fact: my first ever concert was here in the U.S for Blink-182 in 2016 during my freshman year.</p>
               </div>
               <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
