add info session slides

--- a/about.html
+++ b/about.html
@@ -29,7 +29,8 @@ layout: default
             <hr>
         <p>
           <b>Info Session</b><br>
-          Haines Hall, Room A2. 7-8pm <strong><b>October 3rd</b></strong>
+          Haines Hall, Room A2. 7-8pm <strong><b>October 3rd</b></strong><br>
+          <a href="https://docs.google.com/presentation/d/15s9brEB3v0fSoXRhNw_1gRM_B-wEPZ_5updAY6RUEF8/edit?usp=sharing">Slides</a>
         </p>
         <p>
           <b>First Meeting</b><br>
