--- a/speakers/index.html
+++ b/speakers/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About
+title: Speakers
 ---
 
 <head>
@@ -38,18 +38,6 @@ title: About
             </p>
             <hr>
           </div>
-
-          <div id="abtdescription">
-
-            <h2 style="color: #ffab40;">Some of Our Guest Speakers</h2>
-            <center><h5>Kory Alford - UCLA Basketball Analyst </h5></center>
-            <figure>
-              <center><img class="materialboxed responsive-img" src ="/assets/speakers/KoryAlford.jpeg" alt="picture 1" style="max-width: 95%; "><figcaption></figcaption></center>
-            </figure>
-            <center>More will be added soon!</center>
-            <hr>
-          </div>
-
           <div id="abtdescription">
 
             <h2 style="color: #ffab40;">Apply!</h2>
