--- a/_posts/2017-09-19-thinktwice.html
+++ b/_posts/2017-09-19-thinktwice.html
@@ -5,6 +5,7 @@ date:   2017-09-19 15:20:51 -0700
 authors:
 - konner_macias
 categories: jekyll update
+tags: BLOG
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/avg-error.png" alt=graph></center><p>With the second week of the NFL concluding last night with a 24–10 victory for the Lions over the Giants, I decided to take a look at ESPN fantasy point projection accuracy thus far. ESPN is one of the leading hosts for fantasy football leagues around the country with millions of people trusting their projections to decide which players they should start. After comparing the starting point projections for each week against the actual number of points the player earned, it looks like ESPN has to step up their game. </p>
 ---
