--- a/speakers/index.html
+++ b/speakers/index.html
@@ -26,32 +26,13 @@ title: Speakers
       <section class="module content">
         <center>
           <div id="abtdescription">
-            <h2 style="color: #ffab40;">About</h2>
-            <p>
-                Bruin Sports Analytics is a student-run sports statistics club that serves as a platform for sports research, data journalism, and machine learning applications.
-            </p>
-            <p>
-                We are composed of a Data Journalism Team, which aims to produce monthly short entertaining articles, and a Research Team, which works closely with our club advisor to publish at least 1 sports research paper a year. 
-            </p>
-            <p>
-                If you are interested in learning more about what we do, please contact us <a href= "mailto:bruinsportsanalyticsclub@gmail.com">here!</a>
-            </p>
+            <h2 style="color: #ffab40;">Guest Speakers</h2>
+            <center><h5>Kory Alford - UCLA Basketball Analyst </h5></center>
+            <figure>
+              <center><img src ="/assets/speakers/KoryAlford.jpeg" alt="picture 1" style="max-width: 95%;"><figcaption></figcaption></center>
+            </figure>
+            <center>More will be added soon!</center>
             <hr>
-          </div>
-          <div id="abtdescription">
-
-            <h2 style="color: #ffab40;">Apply!</h2>
-
-            <p>
-              Click <a href="https://docs.google.com/forms/d/e/1FAIpQLSdiGRVX7w71MZPJvR6209L5CzmdtvVrYYqjDcYkfS5dkm8j-g/viewform?usp=sf_link">here</a> for our rolling application for people who didn't apply earlier in the year.
-            </p>
-          </div>
-          <div id="abtdescription">
-            <h2 style="color: #ffab40;">Need some help on a project?</h2>
-            <p>
-
-              Click <a href="https://docs.google.com/forms/d/e/1FAIpQLScWGjYIFglAwr8HUIZ7PSpv_sIeNHgI9-05mizTeX2Sj6-o5g/viewform?usp=sf_link">here</a> to fill out our help form</h1>
-            </p>
           </div>
         </center>
       </section>
