--- a/about.html
+++ b/about.html
@@ -36,6 +36,10 @@ title: About
             <p>
                 If you are interested in learning more about what we do, please contact us <a href= "mailto:bruinsportsanalyticsclub@gmail.com">here!</a>
             </p>
+
+            <figure>
+              <center><img src ="/assets/rams_banner.a4ec78ca9c76401681ca1f632e80e43b" alt="Club Cover" style="max-width: 95%;"><figcaption></figcaption></center>
+            </figure>
             <hr>
           </div>
 
