--- a/speakers/index.html
+++ b/speakers/index.html
@@ -27,6 +27,12 @@ title: Speakers
         <center>
           <div id="abtdescription">
             <h2 style="color: #ffab40;">Guest Speakers</h2>
+
+            <center><h5>Sarah Bailey - LA Rams Sports Performance Analyst</h5></center>
+            <figure>
+              <center><img src ="/assets/speakers/rams.2e85c68a59b44c84a4c623e312cfcfe5" alt="Sarah Bailey" style="max-width: 95%;"><figcaption></figcaption></center>
+            </figure>
+
             <center><h5>Kory Alford - UCLA Basketball Analyst </h5></center>
             <figure>
               <center><img src ="/assets/speakers/KoryAlford.jpeg" alt="picture 1" style="max-width: 95%;"><figcaption></figcaption></center>
