--- a/_posts/2018-11-24-jokicRisingStar.html
+++ b/_posts/2018-11-24-jokicRisingStar.html
@@ -3,13 +3,13 @@ layout: post
 title:  "The NBA’s ‘Perfect Game’ by One of Basketball’s Rising Superstars"
 date:   2018-11-24 15:54:02 -0700
 authors:
--  chad_schimozaki
+-  chad_shimozaki
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/jokicRS/pic_2.png" alt="cover photo"></center><p>In baseball, a "perfect game" is achieved when a pitcher does not allow an opposing player to reach base -27 up, 27 down. While basketball does not have an easily recognizable equivalent, NBA fans were treated to a perfect game this season on Oct. 20. In an easily overlooked rout of the Phoenix Suns, Nikola Jokic recorded a 31-point triple-double with no turnovers while shooting a perfect from the field (11-11), joining Wilt Chamberlain as one of the only two players to ever achieve such a feat, according to a tweet from @ESPNStatsInfo.</p>
 ---
 <br>
-<p>In baseball, a "perfect game" is achieved when a pitcher does not allow an opposing player to reach base -27 up, 27 down. While basketball does not have an easily recognizable equivalent, NBA fans were treated to a perfect game this season on <a href="http://www.espn.com/nba/game?gameId=401070716">Oct. 20</a>. In an easily overlooked rout of the Phoenix Suns, <a href="https://stats.nba.com/player/203999/">Nikola Jokic</a> recorded a 31-point triple-double with no turnovers while shooting a perfect from the field (11-11), joining <a href="https://stats.nba.com/player/76375/career/">Wilt Chamberlain</a> as one of the only two players to ever achieve such a feat, according to a tweet from @ESPNStatsInfo.</p>
+<p>In baseball, a "perfect game" is achieved when a pitcher does not allow an opposing player to reach base - 27 up, 27 down. While basketball does not have an easily recognizable equivalent, NBA fans were treated to a perfect game this season on <a href="http://www.espn.com/nba/game?gameId=401070716">Oct. 20</a>. In an easily overlooked rout of the Phoenix Suns, <a href="https://stats.nba.com/player/203999/">Nikola Jokic</a> recorded a 31-point triple-double with no turnovers while shooting perfect from the field (11-11), joining <a href="https://stats.nba.com/player/76375/career/">Wilt Chamberlain</a> as one of the only two players to ever achieve such a feat, according to a tweet from @ESPNStatsInfo.</p>
 
 <p>Jokic and the Denver Nuggets surpassed expectations from the onset, boasting a 9-1 record and the second seed in the Western Conference in early November. Since then, the Nuggets have lost six of their last nine games due to poor three-point shooting and inconsistent defense. Fortunately, <a href="https://stats.nba.com/player/1627823/">Juancho Hernangomez</a> and <a href="https://stats.nba.com/player/1628420/">Monte Morris</a> have emerged as key rotation players around the young core of <a href="https://stats.nba.com/player/1627750/">Jamal Murray</a>, <a href="https://stats.nba.com/player/203914/">Gary Harris</a>, and Jokic (21, 24, and 23 years old, respectively).</p>
 
