nikhil article plus bio edits

--- a/_posts/2018-11-29-jaredGoffStory.html
+++ b/_posts/2018-11-29-jaredGoffStory.html
@@ -96,11 +96,8 @@ excerpt: <center><img class="excerptpics" src ="/assets/goffStory/pic_8.png" alt
 <p>The article attempted to find a totalizing theory for Goff's rapid improvement, but the truth of the matter is that all have validity. It's obvious that surrounding Goff with a better offensive line, more explosive wide receivers, and a stacked defensive line will improve his numbers. However, similar talent situations exists on other teams (such as Dallas and New York), and those teams clearly do not have the same level of success. Obviously having a genius mind like Sean McVay calling the shots allows Goff to be put in good schematic situations with easy reads and throws. However, Goff still represents an improvement over McVay's previous quarterback, Kirk Cousins. In addition, Goff's abysmal rookie season has several confounding variables- an incompetent head coach, a lack of an offensive line and terrible game scripts that forced Goff to make plays he wasn't able to. Any quarterback could have success under McVay's system, but Goff's performance doesn't fit the mold of a system quarterback. He has been able to transcend defensive schemes and produce big plays, something he couldn't do before. Therefore, Goff's improvement is a combination of the talent and coach around him along with the innate skill he possesses as a franchise quarterback.</p>
 
 <figure>
-	<center><img class="materialboxed responsive-img" src ="/assets/goffStory/pic_8.png" alt="picture 1" style="max-width: 95%;"><figcaption></figcaption></center>
+	<center><img class="materialboxed responsive-img" src ="/assets/goffStory/pic_8.png" alt="picture 1" style="max-width: 95%;"><figcaption>Goff celebrates a touchdown in a Rams win over Kansas City in Week 11</figcaption></center>
 </figure>
-	
-
-<p>Goff celebrates a touchdown in a Rams win over Kansas City in Week 11</p>
 
 <p>Jared Goff may not have the arm talent of Patrick Mahomes, the dual-threat ability of Deshaun Watson, or the toughness of Carson Wentz, but the Rams did not make a mistake by using their first overall pick on him in the 2016 draft. He has shown massive improvement, topping the league in terms of change in nearly every single statistical category. The Rams have their quarterback for the future, and their window for a Super Bowl run is wide open.</p>
 
