--- a/about.html
+++ b/about.html
@@ -55,7 +55,9 @@ title: About
             <h2 style="color: #ffab40;">Need some help on a project?</h2>
             <p>
 
-              Click <a href="https://docs.google.com/forms/d/e/1FAIpQLScWGjYIFglAwr8HUIZ7PSpv_sIeNHgI9-05mizTeX2Sj6-o5g/viewform?usp=sf_link">here</a> to fill out our help form</h1>
+              Click <a href="https://docs.google.com/forms/d/e/1FAIpQLScWGjYIFglAwr8HUIZ7PSpv_sIeNHgI9-05mizTeX2Sj6-o5g/viewform?usp=sf_link">here</a> to fill out our help form<br />
+              <b>or</b> <br />
+              Check out our Resource Folder on <a href="https://github.com/bruinsportsanalytics/Resource-Folder">GitHub</a></h1>
             </p>
           </div>
         </center>
