--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ title: Home
   <main>
     <div id="bloghome">
       <section class="module content">
+        <div id="github-link" align="right"><a href="https://github.com/bruinsportsanalytics/Resource-Folder">Our Resource Folder on GitHub</a></div>
          <div id="hm description">
           <center><h2 style="color: #ffab40;">Data Journalism</h2></center>
           <hr>
