--- a/_posts/2019-01-27-Goalkeeper-Passing.html
+++ b/_posts/2019-01-27-Goalkeeper-Passing.html
@@ -12,6 +12,8 @@ excerpt: <center><img class="excerptpics" src ="/assets/pass/image3.png" alt="co
 
 <p>It is true that a goalkeeper's main job is to keep the ball out of the net. However, in the modern game, where margins are much tighter and errors are easily punished, it is a valuable advantage for a goalkeeper to be an adept passer of the ball. This is particularly useful when a team plays a style with the intent of creating spaces to attack by drawing the opposition to press high, such as the style employed (with success, in the past with Napoli) by Chelsea manager Maurizio Sarri. It is no coincidence, either, to see big clubs spending record sums of money on goalkeepers these days, goalkeepers that are not just shot-stoppers, but also excellent footballers.</p>
 
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/pssPXUABhb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+
 <p>Napoli playing out from the back to create one-on-ones higher up the field. Note how deep Napoli's center-backs are in the build-up and how the goalkeeper Pepe Reina shows composure under pressure to pass the ball instead of simply lumping it upfield.</p>
 
 <h4><b>It's more than just the goalkeeper</b></h4>
